Test ObjectStore without --add-opens
They should generally be not required.