@@ -424,18 +424,6 @@
                 </plugin>
 
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-surefire-plugin</artifactId>
-                    <configuration>
-                        <argLine>
-                            --add-opens=java.base/java.lang=ALL-UNNAMED
-                            --add-opens=java.base/java.util=ALL-UNNAMED
-                            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
-                        </argLine>
-                    </configuration>
-                </plugin>
-
-                <plugin>
                     <groupId>org.basepom.maven</groupId>
                     <artifactId>duplicate-finder-maven-plugin</artifactId>
                     <configuration>
